Fix wrapped select widths

--- a/app/assets/stylesheets/islay/admin/forms.sass
+++ b/app/assets/stylesheets/islay/admin/forms.sass
@@ -149,21 +149,14 @@
       height: auto
 
     &.medium
-      input,
-      select,
-      .select
+      input
         min-width: 8rem
         max-width: 10rem
 
     &.short
-      input,
-      select,
-      .select
+      input
         max-width: 8rem
         min-width: 4rem
-
-  select
-    margin-top: 0.8em
 
   input:focus
     outline: none
